--- a/src/view/EmployeeDisplay.fxml
+++ b/src/view/EmployeeDisplay.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="employeeDisplay" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EmployeeDisplayController">
+<VBox fx:id="employeeDisplay" prefWidth="320.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EmployeeDisplayController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="75.0" prefWidth="320.0" text="Employees">
          <font>
