--- a/src/view/StaffWindow.fxml
+++ b/src/view/StaffWindow.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StaffWindowController">
+<AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StaffWindowController">
    <children>
-      <HBox fx:id="parentNode" layoutX="101.0" layoutY="58.0" prefHeight="480.0" prefWidth="680.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox fx:id="parentNode" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <fx:include fx:id="employeeDisplay" source="EmployeeDisplay.fxml" />
-            <fx:include fx:id="tableWindow" source="TableWindow.fxml" />
+            <fx:include source="EmployeeDisplay.fxml" />
+            <fx:include source="TableWindow.fxml" />
          </children></HBox>
    </children>
 </AnchorPane>
