--- a/src/view/StaffWindow.fxml
+++ b/src/view/StaffWindow.fxml
@@ -5,10 +5,10 @@
 
 <AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StaffWindowController">
    <children>
-      <HBox fx:id="parentNode" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox fx:id="parentNode" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <fx:include fx:id="employeeDisplay" source="EmployeeDisplay.fxml" />
-            <fx:include fx:id="tableWindow" source="TableWindow.fxml" />
+            <fx:include fx:id="employeeDisplay" source="EmployeeDisplay.fxml" HBox.hgrow="ALWAYS" />
+            <fx:include fx:id="tableWindow" source="TableWindow.fxml" HBox.hgrow="ALWAYS" />
          </children></HBox>
    </children>
 </AnchorPane>
